# phone-bill

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
migrations/: env.py
migrations/versions/: 873754780bc2_create_initial_db.py
phone_bill/: app.py
phone_bill/core/adapter/controllers/: __init__.py  generate_report_controller.py  insert_call_data_controller.py
phone_bill/core/adapter/gateways/: __init__.py  billing_gateway.py  call_gateway.py
phone_bill/core/dto/: __init__.py  bill_dto.py  bill_input_dto.py  call_dto.py  call_input_dto.py
phone_bill/core/entities/: billing_data.py  call.py  exceptions.py
phone_bill/core/use_cases/: __init__.py  calculate_call_price.py  generate_billing_report.py  handle_end_call_record.py  handle_start_call_record.py
test/: conftest.py  factories.py  test_app.py  test_call.py  test_db.py  test_get_phone_bill.py  test_process_call_data.py
