[tool.poetry]
name = "phone-bill"
version = "0.1.0"
description = "Prova backend CorpSystem"
authors = ["kaslufl leallucasfonseca@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
